tests/unit/default/syntax-error/029-create-table-parens-name-colon-type-parens-num-comma-num.e.t
---- IN ----
+%table(id:decimal(10,2
---- OUT ----
---- ERR ----
syntax: expected `)` after `...able(id:decimal(10,2` instead of EOL at position 23 - at line 1
---- EXIT ----
1
